--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
@@ -7709,7 +7709,44 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h5 id="Conclusion">Conclusion<a class="anchor-link" href="#Conclusion">¶</a></h5><p>Analytical solutions indicate that at $x_1 = x_2 = \sqrt{2}$, the constraints are satisfied, and from the substitution into the objective function, we can evaluate the maximum value.</p>
+<h5 id="Conclusion-P1">Conclusion P1<a class="anchor-link" href="#Conclusion-P1">¶</a></h5><p>Analytical solutions indicate that at $x_1 = x_2 = \sqrt{2}$, the constraints are satisfied, and from the substitution into the objective function, we can evaluate the maximum value.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h5 id="Optimal-Solution">Optimal Solution<a class="anchor-link" href="#Optimal-Solution">¶</a></h5><p>The optimal solution, denoted by $\omega^*(\sigma_T)$, for the given problem under the constraints and specified conditions is:</p>
+<p>$$
+\omega_1^*(\sigma_T) = \sqrt{2}, \quad \omega_2^*(\sigma_T) = \sqrt{2}
+$$</p>
+<p>This solution satisfies the constraint $x_1 x_2 \geq 2$ with $x_1 x_2 = 2$.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h5 id="Optimal-Value">Optimal Value<a class="anchor-link" href="#Optimal-Value">¶</a></h5><p>The optimal value of the problem, denoted by $R_p(\sigma_T)$, is calculated by evaluating the objective function at the optimal solution points $\omega_1^*(\sigma_T)$ and $\omega_2^*(\sigma_T)$. The calculation is as follows:</p>
+<p>$$
+R_p(\sigma_T) = R_p(\omega_1^*(\sigma_T), \omega_2^*(\sigma_T)) = f(\sqrt{2}, \sqrt{2})
+$$
+$$
+= 5 - (\sqrt{2})^2 - \sqrt{2} \times \sqrt{2} - 3(\sqrt{2})^2
+$$
+$$
+= -5
+$$</p>
+<p>Thus, the optimal value of the objective function, given the constraints and the formulation of the problem, is $R_p(\sigma_T) = -5$.</p>
+<p>This value represents the maximum return achievable under the given constraints and is obtained at the solution where both $x_1$ and $x_2$ are $\sqrt{2}$.</p>
 </div>
 </div>
 </div>
